k8s/kip-backend-depl-serv.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kip-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kip-backend
  template:
    metadata:
      labels:
        app: kip-backend
    spec:
      containers:
        - name: kip-backend
          image: 471112897563.dkr.ecr.ap-northeast-2.amazonaws.com/kip:v132 # ecr 주소 # 미리 세팅
          ports:
            - containerPort: 8080
          resources:
            # container가 사용할 수 있는 리소스의 최대치
            limits:
              cpu: "1"
              memory: "1000Mi"
            # container가 시작될때 보장받아야 하는 최소 자원
            requests:
              cpu: "0.5"
              memory: "500Mi"
          # 런타임이라 db주입, github에 sercrets key에서 넣어주는게 아니라
          # 비밀번호를 내장 저장해서 사용한다.
---
apiVersion: v1
kind: Service
metadata:
  name: kip-backend-service
spec:
  selector:
    app: kip-backend
  ports:
    - name: http
      port: 80
      targetPort: 8080
  # ClusterIP는 클러스터 내부에서만 접근가능한 Service를 생성
  type: ClusterIP
